fixes aria and contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -64,8 +64,16 @@ a:focus {
   outline: 4px solid black;
 }
 
+a:link {
+  color: #ffffff;
+}
+
 a:visited {
   color: #ffffff;
+}
+
+a:hover {
+  color:#ffffff;
 }
 
 a:active {
